--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ js:
   - "assets/scripts/homepage.js"
 meta-description: "beNice17 is a Jekyll theme. Suitable for personal Websites & Blogs."
 ---
-<img src="assets/images/homepage.jpg" alt="Homepage icon" style="margin: 0 auto; display: block">
-<h2 style="text-align: center">Fork this theme: <a href="https://github.com/vietanhdev/beNice17">https://github.com/vietanhdev/beNice17</a></h2>
+
+<p><img src="assets/images/homepage.jpg" width="250" alt="Homepage icon" style="margin: 0 auto; display: block"></p>
+<!-- <h2 style="text-align: center">Fork this theme: <a href="https://github.com/vietanhdev/beNice17">https://github.com/vietanhdev/beNice17</a></h2> -->
 
 <div class="hello-world">
 
@@ -20,19 +21,23 @@ meta-description: "beNice17 is a Jekyll theme. Suitable for personal Websites & 
 
 
 	<h2 verlang="vi">你好!</h2>
-	<p verlang="vi">我是王毅敏。我是一名学生。我喜欢编程和研究一些新的技术。我目前正在开发一些新的数据分析和管理算法。</p>
+	<p verlang="vi">我是王毅敏。我是一名学生。我喜欢编程和研究一些新的技术。我目前正在开发一些新的数据分析和数据管理算法。</p>
 	<p verlang="vi">我建了这个网站用来分享我的知识，以及我学习，工作和生活中学到的经验。欢迎来访问！</p>
 
 	<h2 verlang="en">Contact Info</h2>
 	<h2 verlang="vi">联系方式</h2>
-	<i class="fa fa-github fa-lg" aria-hidden="true"></i>
-	<b>Github:</b> <a href="https://github.com/vietanhdev">https://github.com/vietanhdev</a><br><br>
+	<i class="fab fa-github" aria-hidden="true"></i>
+	<b>Github:</b> <a href="https://github.com/ambisnail">https://github.com/ambisnail</a><br><br>
 
 	<i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
-	<b>Email:</b> <a href="mailto:vietanh@vietanhdev.com">vietanh@vietanhdev.com</a><br><br>
+	<b>Email:</b> <a href="mailto:yimin4@ualberta.ca">yimin4@ualberta.ca</a><br><br>
 
-	<i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
+	<i class="fab fa-facebook-square" aria-hidden="true"></i>
 	<b>Facebook:</b> <a href="https://fb.com/vietanhdev">fb.com/vietanhdev</a>
+
+  <!-- <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
+	<b>Facebook:</b> <a href="https://fb.com/vietanhdev">fb.com/vietanhdev</a> -->
+
 </div>
 
 <h2>Lastest posts on my blog</h2>
