--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ meta-description: "beNice17 is a Jekyll theme. Suitable for personal Websites & 
 	<i class="fab fa-facebook-square" aria-hidden="true"></i>
 	<b>Facebook:</b> <a href="https://fb.com/vietanhdev">fb.com/vietanhdev</a>
 
+  <img src="assets/images/csdn.png">
+  <b>Facebook:</b> <a href="https://fb.com/vietanhdev">fb.com/vietanhdev</a>
   <!-- <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
 	<b>Facebook:</b> <a href="https://fb.com/vietanhdev">fb.com/vietanhdev</a> -->
 
